opam-version: "1.2"
maintainer: "maintenance@identity-function.com"
authors: ["Mindy Preston"]
homepage: "https://github.com/yomimono/ocaml-bun"
bug-reports: "https://github.com/yomimono/ocaml-bun/issues"
dev-repo: "https://github.com/yomimono/ocaml-bun.git"
license: "MIT"
build: [[ "dune" "build" "-p" name "-j" jobs ]]
build-test: [[ "dune" "runtest" "-p" name "-j" jobs ]]
available: [ ocaml-version >= "4.05" ]
depends: [
  "dune" {build & >= "1.0"}
  "bos" {>= "0.2.0" }
  "cmdliner" {>= "1.0.0" }
  "fpath"
  "rresult" {>= "0.3.0" }
  "astring"
  "crowbar" {test}
  "spawn" {>= "v0.12"}
  "afl" {= "2.52b"}
  "logs"
  "fmt"
]
