(executable
 (name short)
 (ocamlopt_flags -afl-instrument)
 (modules short)
 (libraries crowbar))

(executable
 (name long)
 (ocamlopt_flags -afl-instrument)
 (modules long)
 (libraries crowbar))

(rule
 (target shorttest-output)
 (locks core)
 (deps ../src/bun.exe short.exe)
 (action
  (with-stdout-to
   %{target}
   (bash "! timeout 2s ../src/bun.exe -vv ./short.exe"))))

(alias
 (name runtest)
 (locks core)
 (action
  (progn
   (bash "grep 'Crashes found!' shorttest-output")
   (cat shorttest-output))))

(alias
 (name longtest)
 (deps ../src/bun.exe long.exe)
 (locks core)
 (action
  (run timeout 65s ../src/bun.exe -vv ./long.exe)))
